<resources>
    <string name="app_name">MobileButler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_orders">Orders</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="order_number">Order number</string>
    <string name="currency">€</string>
    <string name="tables">Tables</string>
    <string name="open_new_order">Open new order</string>
    <string name="order_items_text">Ordered items</string>
    <string name="table_number">Table number</string>
    <string name="order_closed">Order closed</string>
    <string name="not_closed">Not closed yet</string>
    <string name="single_order_items_none">No items were ordered</string>
    <string name="x_quantity">x</string>
    <string name="products">Products</string>
    <string name="sum">Sum</string>
    <string name="quantity">Quantity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="order_close">Close order</string>
    <string name="order_split">Split order</string>
    <string name="order_close_confirmation_text">Close the order and print the receipt.</string>
    <string name="confirm">Confirm</string>
    <string name="search">Search</string>
    <string name="search_products">name, number</string>
    <string name="app_name_signin">Mobile Butler</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="signin_error_message">Incorrect e-mail or password</string>
    <string name="signout">Sign out</string>
    <string name="order_cancel">Cancel order</string>
</resources>