<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="@dimen/view_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/celery_400">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ans_fine_250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="-50dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" />

    <TextView
            style="@style/FadedTitle"
            android:textAlignment="center"
            android:text="@string/app_name_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontal_guideline"
            app:layout_constraintGuide_percent="0.4"
            android:orientation="horizontal" />

    <EditText
            android:id="@+id/signin_email"
            android:hint="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp" />

    <EditText
            android:id="@+id/signin_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/signin_email"
            android:layout_marginTop="50dp" />

    <Button
            android:id="@+id/signin_button"
            android:text="@string/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <TextView
            android:id="@+id/signin_error_message"
            android:text="@string/signin_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signin_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>