<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/view_padding">

    <TextView
            android:text="@string/order_close_confirmation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/order_close_confirmation" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/group1"
            app:layout_constraintBottom_toTopOf="@+id/order_close_confirmation">

        <TextView
                android:id="@+id/order_id_text"
                android:text="@string/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/order_id_text"
                app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/order_close_confirmation"
            app:layout_constraintTop_toBottomOf="@+id/group1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/sum_text"
                android:text="@string/sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/sum_text"
                app:layout_constraintEnd_toStartOf="@+id/currency_text" />

        <TextView
                android:text="@string/currency"
                android:id="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/sum_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
            android:id="@+id/order_close_cancel_button"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_center"
            app:layout_constraintTop_toBottomOf="@+id/order_close_confirmation"
            android:layout_marginEnd="@dimen/text_margin"/>

    <Button
            android:id="@+id/order_close_confirm_button"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_close_confirmation"
            android:layout_marginStart="@dimen/text_margin"/>

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_center"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />
</androidx.constraintlayout.widget.ConstraintLayout>