<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

    <TextView
            android:text="@string/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/single_order_detail_orderId_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/single_order_detail_orderId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/single_order_detail_orderId_text"
            app:layout_constraintEnd_toEndOf="parent" />


    <TextView
            android:text="@string/table_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/single_order_detail_table_text"
            app:layout_constraintTop_toBottomOf="@+id/single_order_detail_orderId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/single_order_detail_table"
            app:layout_constraintTop_toBottomOf="@+id/single_order_detail_table_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/order_closed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/single_order_detail_closed_text"
            app:layout_constraintTop_toBottomOf="@+id/single_order_detail_table"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/single_order_detail_closed"
            app:layout_constraintTop_toBottomOf="@+id/single_order_detail_closed_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>